--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -120,25 +120,25 @@ body
         display: block
 
 .arrow-up
-    background: url('/up.svg') no-repeat
+    background: url('../../public/svg/up.svg') no-repeat
     background-size: 60%
     background-position: center center
     animation: showArrow 1s ease-out 0s
 
 .arrow-left
-    background: url('/left.svg')  no-repeat
+    background: url('../../public/svg/left.svg')  no-repeat
     background-size: 60%
     background-position: center center
     animation: showArrow 1s ease-out 0s
     
 .arrow-right
-    background: url('/right.svg')  no-repeat
+    background: url('../../public/svg/right.svg')  no-repeat
     background-size: 60%
     background-position: center center
     animation: showArrow 1s ease-out 0s
 
 .arrow-down
-    background: url('/down.svg')  no-repeat
+    background: url('../../public/svg/down.svg')  no-repeat
     background-size: 60%
     background-position: center center
     animation: showArrow 1s ease-out 0s 
